--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <div class="wrapper">
         <div class="sidebar">
+            <div class="settings">
+                <p>Home</p>
+                <p>Search</p>
+                <p>Your Library</p>
+                <p>Create Playlist</p>
+                <p>Liked Songs</p>
+            </div>
+            <hr size="0.5" noshade color="#363636">
             <div class="playlists">
                 <p>songs that remind me of chili 🙄</p>
                 <p>stalking playlist</p>
@@ -33,15 +41,13 @@
                 <h3 class="titles">COLLABORATIVE PLAYLIST</h3>
                 <h1 id="playlistTitle">moon-bound connection</h1>
                 <p id="playlistBio">seventy-eight.<br><img src="https://media.discordapp.net/attachments/855278438574456842/864954519053008938/unknown.png" id="cat">707 likes ● 22 songs, 1 hr 30 min</p>
-                </div>
-            </div>
-            <div class="songs">
             </div>
         </div>
-        <div class="footer">
-            <img src="https://media.discordapp.net/attachments/855278438574456842/864921418142580776/unknown.png" id="footerIcon">
-            <p id="footerType">Come Inside Of My Heart<br>IV Of Spades</p>
-        </div>
+    </div>
+    <div class="footer">
+        <img src="https://media.discordapp.net/attachments/855278438574456842/864921418142580776/unknown.png" id="footerIcon">
+        <p id="footerType">Come Inside Of My Heart<br>IV Of Spades</p>
+    </div>
     </div>
 </body>
 </html>
