--- a/index.html
+++ b/index.html
@@ -8,46 +8,121 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="sidebar">
-            <div class="settings">
+    <div class="sidebar">
+        <img src="https://i.ibb.co/dD2vSjT/unknown-1.png" id="topSettings">
+        <div class="settings">
+            <div class="setting">
+                <img src="https://i.ibb.co/n8y4Tzq/unknown-1.png" class="settingIcon1">
                 <p>Home</p>
+            </div>
+            <div class="setting">
+                <img src="https://i.ibb.co/Qf0NdNg/unknown-1.png" class="settingIcon1">
                 <p>Search</p>
+            </div>
+            <div class="setting">
+                <img src="https://i.ibb.co/ncjbqpc/unknown-1.png" class="settingIcon1">
                 <p>Your Library</p>
+            </div>
+            <div class="setting">
+                <img src="https://i.ibb.co/sbqTBDX/unknown-1.png" class="settingIcon2">
                 <p>Create Playlist</p>
+            </div>
+            <div class="setting">
+                <img src="https://i.ibb.co/TBM2TyN/unknown-1.png" class="settingIcon2">
                 <p>Liked Songs</p>
             </div>
-            <hr size="0.5" noshade color="#363636">
-            <div class="playlists">
-                <p>songs that remind me of chili 🙄</p>
-                <p>stalking playlist</p>
-                <p id="now_playing">moon-bound connection</p>
-                <p>the band kid life</p>
-                <p>oh to be young and in love</p>
-                <p>i'm not a weeb i swear</p>
-                <p>wowow sparkly fuzzy uwuwu</p>
-                <p>dark rooms & neon lights</p>
-                <p>何もきかないで</p>
-                <p>i'll be the main antagonist</p>
-                <p>POV you don't like romance...</p>
-                <p>stack it like tetris</p>
-                <p>running in an open field at dead hours</p>
-            </div>
         </div>
-        <div class="main">
-            <a href="./new_page.html" id="Thunder78">Thunder 78</a>
-            <div class="top">
-                <img src="https://cdn.discordapp.com/attachments/855278438574456842/862894334218076200/moon.png" id="playlistIcon">
-                <h3 class="titles">COLLABORATIVE PLAYLIST</h3>
-                <h1 id="playlistTitle">moon-bound connection</h1>
-                <p id="playlistBio">seventy-eight.<br><img src="https://media.discordapp.net/attachments/855278438574456842/864954519053008938/unknown.png" id="cat">707 likes ● 22 songs, 1 hr 30 min</p>
+        <hr size="0.5" noshade color="#363636">
+        <div class="playlists">
+            <p>songs that remind me of chili 🙄</p>
+            <p>stalking playlist</p>
+            <p id="now_playing">moon-bound connection</p>
+            <p>the band kid life</p>
+            <p>oh to be young and in love</p>
+            <p>i'm not a weeb i swear</p>
+            <p>wowow sparkly fuzzy uwuwu</p>
+            <p>dark rooms & neon lights</p>
+            <p>何もきかないで</p>
+            <p>i'll be the main antagonist</p>
+            <p>POV you don't like romance...</p>
+            <p>stack it like tetris</p>
+            <p>running in an open field at dead hours</p>
+        </div>
+    </div>
+    <div class="main">
+        <div class="thunder78">
+            <img src="https://i.ibb.co/zGKZV0t/unknown-1.png">
+            <a href="./new_page.html">Thunder 78</a>
+        </div>
+        <div class="top">
+            <img src="https://cdn.discordapp.com/attachments/855278438574456842/862894334218076200/moon.png" id="playlistIcon">
+            <h3 class="titles">COLLABORATIVE PLAYLIST</h3>
+            <h1 id="playlistTitle">moon-bound connection</h1>
+            <p id="playlistBio">seventy-eight.<br><img src="https://media.discordapp.net/attachments/855278438574456842/864954519053008938/unknown.png" id="cat">707 likes ● 22 songs, 1 hr 30 min</p>
+        </div>
+    </div>
+    <div class="playButtons">
+        <img src="https://i.ibb.co/qY81p1y/green-play.png" id="greenPlay">
+        <img src="https://i.ibb.co/h7ZWFr3/unknown-1.png" id="download">
+        <img src="https://i.ibb.co/dJwwnx4/unknown-1.png" id="ellipses">
+        <img src="https://i.ibb.co/cr6W8mq/unknown-1.png" id="magnifyingGlass">
+        <p id="customOrder">Custom order</p>
+        <img src="https://i.ibb.co/sR5j0rq/unknown-1.png" id="triangle">
+    </div>
+    <div class="infoCategories">
+        <h2 id="number">#</h2>
+        <h2 id="title">TITLE</h2>
+        <h2 id="album">ALBUM</h2>
+        <h2 id="dateAdded">DATE ADDED</h2>
+    </div>
+    <div class="divider">
+        <hr size="0.5" noshade color="#C4C4C4">
+    </div>
+    <div class="songs">
+        <div class="song" onclick="location.href='#';" style="cursor: pointer;">
+            <h1>1</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/id/2/23/NCT_127_Regular_Irregular_cover.jpg" class="songIcon">
+            <div class="songInfo">
+                <h2>City 127</h2>
+                <p>NCT 127</p>
             </div>
+            <h2 class="album">NCT #127 Regular-Irregular - Th...</h2>
+            <h2 class="date">Nov 5, 2021</h2>
+            <h2 class="time">3:19</h2>
+        </div>
+        <div class="song" onclick="location.href='#';" style="cursor: pointer;">
+            <h1>2</h1>
+            <img src="https://th.bing.com/th/id/OIP.DsvJ8-Wx2nvNodptEp1MiwHaHa?pid=ImgDet&rs=1" class="songIcon">
+            <div class="songInfo">
+                <h2>Still Into You</h2>
+                <p>Paramore</p>
+            </div>
+            <h2 class="album">Paramore</h2>
+            <h2 class="date">Nov 5, 2021</h2>
+            <h2 class="time">3:36</h2>
+        </div>
+        <div class="song" onclick="location.href='#';" style="cursor: pointer;">
+            <h1><img src="https://i.ibb.co/w7n9GMD/unknown-1.png" id="greenBars"></h1>
+            <img src="https://th.bing.com/th/id/OIP.jAFXWEgv-gOnmhlatVnZ6gHaHa?pid=ImgDet&rs=1" class="songIcon">
+            <div class="songInfo">
+                <h2 id="nowPlayingGreen">Come Inside Of My Heart</h2>
+                <p>IV Of Spades</p>
+            </div>
+            <h2 class="album">CLAPCLAPCLAP!</h2>
+            <h2 class="date">Nov 5, 2021</h2>
+            <h2 class="time">4:06</h2>
         </div>
     </div>
     <div class="footer">
         <img src="https://media.discordapp.net/attachments/855278438574456842/864921418142580776/unknown.png" id="footerIcon">
-        <p id="footerType">Come Inside Of My Heart<br>IV Of Spades</p>
+        <div class="footerType">
+            <h3>Come Inside Of My Heart</h3>
+            <p>IV Of Spades</p>
+        </div>
+        <img src="https://i.ibb.co/mcs4NwK/unknown-1.png" id="heart">
+        <img src="https://i.ibb.co/NV0V7c9/unknown-1.png" id="progressBar">
+        <img src="https://i.ibb.co/q9qc55j/unknown-1.png" id="volume">
     </div>
-    </div>
+
 </body>
 </html>
