--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="main">
         <div class="thunder78">
             <img src="https://i.ibb.co/zGKZV0t/unknown-1.png">
-            <a href="./new_page.html">Thunder 78</a>
+            <a href="./about.html">Thunder 78</a>
         </div>
         <div class="top">
             <img src="https://cdn.discordapp.com/attachments/855278438574456842/862894334218076200/moon.png" id="playlistIcon">
@@ -79,7 +79,7 @@
         <hr size="0.5" noshade color="#C4C4C4">
     </div>
     <div class="songs">
-        <div class="song" onclick="location.href='#';" style="cursor: pointer;">
+        <div class="song" onclick="location.href='./city127.html';" style="cursor: pointer;">
             <h1>1</h1>
             <img src="https://upload.wikimedia.org/wikipedia/id/2/23/NCT_127_Regular_Irregular_cover.jpg" class="songIcon">
             <div class="songInfo">
