--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
         <div class="playlists">
             <p>songs that remind me of chili 🙄</p>
             <p>stalking playlist</p>
-            <p>moon-bound connection</p>
-            <p>the band kid life</p>
-            <p>oh to be young and in love</p>
-            <p>i'm not a weeb i swear</p>
+            <p onclick="location.href='./index.html';" style="cursor: pointer;">moon-bound connection</p>
+            <p onclick="location.href='https://open.spotify.com/playlist/3gCSs0cZilmq23kuKd71OQ?si=b59dde3b5e804fcc';" style="cursor: pointer;">the band kid life</p>
+            <p onclick="location.href='https://open.spotify.com/playlist/0BPIIt13M3SPrw508lJkCq?si=70c3e8c909594eae';" style="cursor: pointer;">oh to be young and in love</p>
+            <p onclick="location.href='https://open.spotify.com/playlist/3kYgyPagBnv1hXcQsX0b78?si=32e241c523d54cbd';" style="cursor: pointer;">i'm not a weeb i swear</p>
             <p>wowow sparkly fuzzy uwuwu</p>
             <p>dark rooms & neon lights</p>
             <p>何もきかないで</p>
