--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon-Bound Connection</title>
-    <link rel="stylesheet" href="learning_vue.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/vue@3.0.2"></script>
 </head>
 <body>
