--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/facebook/230/saxophone_1f3b7.png" id="profileIcon" v-show="showAbout">
             <div class="top">
                 <img src="https://cdn.discordapp.com/attachments/855278438574456842/862894334218076200/moon.png" id="playlistIcon" v-show="!showAbout">
-                <h3 class="titles">{{ header }}</h3>
+                <h3 class="titles">COLLABORATIVE PLAYLIST</h3>
                 <h1 id="playlistTitle" v-show="!showAbout">moon-bound connection</h1>
                 <h1 id="profileTitle" v-show="showAbout">Thunder 78</h1>
                 <p id="playlistBio" v-show="!showAbout">seventy-eight.<br><img src="https://media.discordapp.net/attachments/855278438574456842/864954519053008938/unknown.png" id="cat">707 likes ● 22 songs, 1 hr 30 min</p>
