--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon-Bound Connection</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/jpg" href="http://cdn.shopify.com/s/files/1/1061/1924/products/Moon_emoji_icon_png_grande.png?v=1571606088"/>
     <script src="https://unpkg.com/vue@3.0.2"></script>
 </head>
 <body>
